--- a/templates/search/error.html.twig
+++ b/templates/search/error.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
     <div class="container">
-        <div class="block-reporting mt-5">
+        <div class="mt-5">
             {% if error is defined %}
                 <h1 class="text-center mb-5">{{ error }}</h1>
             {% endif %}
