--- a/templates/search/search.html.twig
+++ b/templates/search/search.html.twig
@@ -1,5 +1,5 @@
 {% if search is defined %}
-    <div id="searchSaved" class="block-reporting">
+    <div id="searchSaved">
         <h2 class="text-center mt-5 mb-5">
             Période de recherche sauvegardée : {{ search.name }}
         </h2>
