--- a/templates/search/show.html.twig
+++ b/templates/search/show.html.twig
@@ -8,7 +8,7 @@
         {% include 'search/table.html.twig' %}
         {% include 'reporting/infos.html.twig' %}
         {% include 'reporting/chart.html.twig' %}
-        <div class="block-reporting mt-5">
+        <div class="mt-5">
             {% if search is defined %}
                 <hr/>
                 {% include 'search/link.html.twig' %}
