--- a/templates/navbar/navbar.html.twig
+++ b/templates/navbar/navbar.html.twig
@@ -3,19 +3,16 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                            data-toggle="dropdown"
                            aria-haspopup="true" aria-expanded="false">
-                            Board
+                            Outil Reporting
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="{{ path('list_searches') }}">Liste des recherches</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="{{ path('reporting') }}">Outil Reporting</a>
+                            <a class="dropdown-item" href="{{ path('reporting') }}">Formulaire de recherche</a>
                         </div>
                     </li>
                 </ul>
