--- a/templates/reporting/all.html.twig
+++ b/templates/reporting/all.html.twig
@@ -4,28 +4,32 @@
 
 {% block body %}
     {% if issues is defined and period is defined %}
-        <div class="container-fluid">
+        <div class="container">
             <h2 class="text-center mt-5 mb-5">Période de recherche : {{ period }}</h2>
             <table class="table table-hover table-sm mt-5 mb-3">
                 <thead>
-                <tr>
-                    {% for title, issue in issues|first %}
-                        <th>{{ title }}</th>
-                    {% endfor %}
+                <tr class="text-center">
+                    <th>Numéro</th>
+                    <th>Priorité</th>
+                    <th>Type de tracker</th>
+                    <th>Plateforme</th>
+                    <th>Crée le</th>
+                    <th>Fermé le</th>
+                    <th>Temps passé</th>
+                    <th>Lien</th>
                 </tr>
                 </thead>
                 <tbody>
-                {% for data in issues %}
-                    <tr>
-                        {% for issue in data %}
-                            <td>
-                                {% if 'https://redmine.timeonegroup.com' in issue %}
-                                    <a href="{{ issue }}">{{ issue }}</a>
-                                {% else %}
-                                    {{ issue }}
-                                {% endif %}
-                            </td>
-                        {% endfor %}
+                {% for issue in issues %}
+                    <tr class="text-center">
+                        <td>{{ issue.number }}</td>
+                        <td>{{ issue.priority }}</td>
+                        <td>{{ issue.type }}</td>
+                        <td>{{ issue.platform }}</td>
+                        <td>{{ issue.createdOn }}</td>
+                        <td>{{ issue.closedOn }}</td>
+                        <td>{{ issue.timeSpent }}</td>
+                        <td><a href="#">{{ issue.link }}</a></td>
                     </tr>
                 {% endfor %}
                 </tbody>
