--- a/templates/reporting/chart.html.twig
+++ b/templates/reporting/chart.html.twig
@@ -1,40 +1,48 @@
 {% if charts is defined %}
     {% if charts is not null %}
-        <div class="d-inline-flex flex-column m-0 float-right">
-            <div class="m-0 charts-arrows-top" id="div-charts-arrows-top">
-                <a href="#reporting-{{ form is defined ? 'form' : 'infos' }}"
-                   class="btn btn-light float-right"
-                   role="button"
-                   id="link-top-arrow-up">
-                    <i class="fas fa-angle-up"></i>
-                </a>
-            </div>
-            <div class="m-0 charts-arrows-top">
-                <a href="#reporting-checkbox"
-                   class="btn btn-light float-right"
-                   role="button"
-                   id="link-top-arrow-down">
-                    <i class="fas fa-angle-down"></i>
-                </a>
-            </div>
-        </div>
-        <div id="reporting-charts" class="block-reporting mb-3">
+        <div id="reporting-charts" class="mt-5 mb-3">
             <hr/>
             <div class="text-center" id="reporting-priority-order">
                 <input type="checkbox" id="priority-order" name="priority-order" value="priority-order" checked/>
                 <label for="priority-order"> Ordre de priorité</label>
             </div>
-            <div class="d-flex justify-content-sm-between" id="first-chart">
-                <div class="google-charts withoutPrio" id="ticketsTraqueur"></div>
-                <div class="google-charts withPrio" id="ticketsTraqueurPrio"></div>
-                <div class="google-charts withoutPrio" id="heuresTraqueur"></div>
-                <div class="google-charts withPrio" id="heuresTraqueurPrio"></div>
+            <div class="d-inline-flex flex-column m-0 float-right">
+                <div class="m-0 charts-arrows-top" id="div-charts-arrows-top">
+                    <a href="#reporting-{{ form is defined ? 'form' : 'infos' }}"
+                       class="btn btn-light float-right"
+                       role="button"
+                       id="link-top-arrow-up">
+                        <i class="fas fa-angle-up"></i>
+                    </a>
+                </div>
+                <div class="m-0 charts-arrows-top">
+                    <a href="#reporting-checkbox"
+                       class="btn btn-light float-right"
+                       role="button"
+                       id="link-top-arrow-down">
+                        <i class="fas fa-angle-down"></i>
+                    </a>
+                </div>
             </div>
-            <div class="d-flex justify-content-sm-between">
-                <div class="google-charts withoutPrio" id="ticketsPlateforme"></div>
-                <div class="google-charts withPrio" id="ticketsPlateformePrio"></div>
-                <div class="google-charts withoutPrio" id="heuresPlateforme"></div>
-                <div class="google-charts withPrio" id="heuresPlateformePrio"></div>
+            <div class="container mb-3" id="first-chart">
+                <div class="row justify-content-start">
+                    <div class="google-charts withoutPrio col-md-9 col-lg-5" id="ticketsTracker"></div>
+                    <div class="google-charts withoutPrio col-md-9 col-lg-5" id="hoursTracker"></div>
+                </div>
+                <div class="row justify-content-start">
+                    <div class="google-charts withPrio col-md-9 col-lg-5" id="ticketsTrackerPrio"></div>
+                    <div class="google-charts withPrio col-md-9 col-lg-5" id="hoursTrackerPrio"></div>
+                </div>
+            </div>
+            <div class="container mb-3">
+                <div class="row justify-content-start">
+                    <div class="google-charts withoutPrio col-md-9 col-lg-5" id="ticketsPlatform"></div>
+                    <div class="google-charts withoutPrio col-md-9 col-lg-5" id="hoursPlatform"></div>
+                </div>
+                <div class="row justify-content-start">
+                    <div class="google-charts withPrio col-md-9 col-lg-5" id="ticketsPlatformPrio"></div>
+                    <div class="google-charts withPrio col-md-9 col-lg-5" id="hoursPlatformPrio"></div>
+                </div>
             </div>
         </div>
         <div class="d-inline-flex flex-column m-0 float-right" id="div-arrows-middle">
@@ -56,9 +64,8 @@
             </div>
         </div>
 
-        {% set array = ['Console', 'Infra', 'LMT', 'MediaBuying', 'Nativious',
-            'Performance', 'Publishing', 'RGPD', 'Wavecy', 'Wordpress'] %}
-        <div class="block-reporting mt-3" id="reporting-checkbox">
+        {% set array = ['Console', 'Native', 'Perf', 'Publish', 'Support', 'Wordpress'] %}
+        <div class="mt-3" id="reporting-checkbox">
             <hr/>
             <div class="d-flex justify-content-between">
                 {% for item in array %}
@@ -73,12 +80,14 @@
         </div>
 
         {% for item in array %}
-            <div id="reporting-charts-{{ item|lower }}" class="block-reporting">
-                <div class="d-flex justify-content-sm-between">
-                    <div class="google-charts charts-plateforme withoutPrio" id="tickets{{ item }}"></div>
-                    <div class="google-charts charts-plateforme withPrio" id="tickets{{ item }}Prio"></div>
-                    <div class="google-charts charts-plateforme withoutPrio" id="heures{{ item }}"></div>
-                    <div class="google-charts charts-plateforme withPrio" id="heures{{ item }}Prio"></div>
+            <div class="container mb-3" id="reporting-charts-{{ item|lower }}">
+                <div class="row justify-content-start">
+                    <div class="google-charts charts-plateforme withoutPrio col-md-9 col-lg-5" id="tickets{{ item }}"></div>
+                    <div class="google-charts charts-plateforme withoutPrio col-md-9 col-lg-5 col-xl-6" id="hours{{ item }}"></div>
+                </div>
+                <div class="row justify-content-start">
+                    <div class="google-charts charts-plateforme withPrio col-md-9 col-lg-5" id="tickets{{ item }}Prio"></div>
+                    <div class="google-charts charts-plateforme withPrio col-md-9 col-lg-5" id="hours{{ item }}Prio"></div>
                 </div>
             </div>
         {% endfor %}
@@ -90,7 +99,7 @@
             {% endfor %}
         </script>
     {% else %}
-        <div class="block-reporting">
+        <div>
             <hr/>
             <h2 class="text-center mb-5 mt-5">
                 Graphique ne peut pas être affiché !
