small error in template chart

--- a/templates/reporting/chart.html.twig
+++ b/templates/reporting/chart.html.twig
@@ -83,7 +83,7 @@
             <div class="container mb-3" id="reporting-charts-{{ item|lower }}">
                 <div class="row justify-content-start">
                     <div class="google-charts charts-plateforme withoutPrio col-md-9 col-lg-5" id="tickets{{ item }}"></div>
-                    <div class="google-charts charts-plateforme withoutPrio col-md-9 col-lg-5 col-xl-6" id="hours{{ item }}"></div>
+                    <div class="google-charts charts-plateforme withoutPrio col-md-9 col-lg-5" id="hours{{ item }}"></div>
                 </div>
                 <div class="row justify-content-start">
                     <div class="google-charts charts-plateforme withPrio col-md-9 col-lg-5" id="tickets{{ item }}Prio"></div>
