--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,11 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}Welcome!{% endblock %}</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Reporting tool">
+    <meta name="author" content="I'am Tuyetrinhvo, Web developer">
+    <title>{% block title %}Outil de Reporting{% endblock %}</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
           crossorigin="anonymous">
@@ -12,7 +16,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css">
     <link rel="stylesheet" href="{{ asset('css/reporting.css') }}"/>
 
-{% block stylesheets %}{% endblock %}
+    {% block favicon %}
+        <link rel="icon" type="apple-touch-icon" href="{{ asset('img/apple-touch-icon.png') }}"/>
+        <link rel="shortcut icon" type="image/x-icon" href="{{ asset('img/favicon.png') }}" />
+    {% endblock %}
 
 </head>
 <body>
