--- a/templates/search/error.html.twig
+++ b/templates/search/error.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Reporting - Erreurs{% endblock %}
+
 {% block body %}
     <div class="container">
         <div class="mt-5">
