--- a/templates/search/show.html.twig
+++ b/templates/search/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Recherches enregistrées{% endblock %}
+{% block title %}Reporting - Périodes de recherche sauvegardées{% endblock %}
 
 {% block body %}
 
