--- a/templates/search/table.html.twig
+++ b/templates/search/table.html.twig
@@ -14,7 +14,7 @@
             <tr>
                 <td>{{ search.date|date('d/m/Y H:i:s') }}</td>
                 <td>{{ search.name }}</td>
-                <td class="text-center">
+                <td class="text-center buttons-custom">
                     {% include 'search/actions.html.twig' %}
                 </td>
             </tr>
