--- a/templates/search/search.html.twig
+++ b/templates/search/search.html.twig
@@ -3,8 +3,10 @@
         <h2 class="text-center mt-5 mb-5">
             Période de recherche sauvegardée : {{ search.name }}
         </h2>
-        <div class="d-flex justify-content-between mt-2 mb-5">
-            {% include 'search/actions.html.twig' %}
+        <div class="actions-button">
+            <div class="d-flex justify-content-between mt-2 mb-5">
+                {% include 'search/actions.html.twig' %}
+            </div>
         </div>
     </div>
 {% endif %}
